--- a/css/style.css
+++ b/css/style.css
@@ -38,20 +38,31 @@ header {
 	padding:1.5rem;
 }
 
-.postcode {
+.postcode--search {
 	display: none;
 	z-index: 999;
 	position: absolute;
 	top:200px;
 	left:50%;
 	margin-left: -100px;
-	width:200px;
-	height:70px;
-	line-height: 1;
+	width:260px;
+	text-align: center;
 	font-weight: 100;
-	font-size: 1.3rem;
+}
+
+.postcode--input {
+	height:30px;
+	line-height: 1;
+	font-size: 1.5rem;
 	text-align: center;
 	background-color: rgba(255,255,255,0.5);
-	border-radius: 10px;
+	border-radius: 5px;
 	border:1px solid #000;
+}
+
+.postcode--btn {
+	margin-top:10px;
+	padding:1em;
+	width:100px;
+	font-size: 1.5rem;
 }
