more media mobile styling

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,10 @@ header {
 }
 
 @media (max-width: 320px) {
-#map-canvas {
-	height: 200px;
-}
+	header p {
+		font-size: 10px;
+	}
+	#map-canvas {
+		height: 200px;
+	}
 	}
