--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ header {
 	padding: 0.5rem 1.5rem;
 }
 
+.display-list {
+	list-style: none;
+}
+
 @media (max-width: 320px) {
 	header {
 		padding:0 1.5rem;
