--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ header {
 	list-style: none;
 }
 
+.display-list li {
+	padding-bottom: 0.3rem;
+}
+
 @media (max-width: 320px) {
 	header {
 		padding:0 1.5rem;
