--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   background: #FAF8FF;
-  color: #800000;
+  color: #d35400;
 }
 
 #map-canvas {
@@ -15,8 +15,6 @@ html, body {
 	padding: 0;
 	height: 300px;
 	width:100%;
-	border-top: 1px solid #800000;
-	border-bottom: 1px solid #800000;
 	-webkit-transition:all 0.3s ease-in-out;
 	-moz-transition:all 0.3s ease-in-out;
 	-o-transition:all 0.3s ease-in-out;
@@ -25,64 +23,60 @@ html, body {
 }
 
 #map-canvas:hover {
-	-webkit-filter: blur(0);
-	}
+	/*-webkit-filter: blur(0);*/
+}
 
 .blur {
 	-webkit-filter: blur(10px);
 }
 
+.alpha--banner {
+	padding: 0;
+	margin: 0;
+	display: block;
+	top:0;
+	left:0;
+	width:100%;
+	text-align: center;
+	background-color: #c0392b;
+	color:#fff;
+}
+	.alpha--banner p {
+		padding: 1em;
+		margin: 0;
+	}
+
 header {
 	width: 800px;
 	margin:0 auto;
-	padding:1.5rem;
-}
-
-.postcode--search {
-	display: none;
-	z-index: 999;
-	position: absolute;
-	top:200px;
-	left:50%;
-	margin-left: -100px;
-	width:260px;
-	text-align: center;
-	font-weight: 100;
-}
-
-.postcode--input {
-	height:30px;
-	line-height: 1;
-	font-size: 1.5rem;
-	text-align: center;
-	background-color: rgba(255,255,255,0.5);
-	border-radius: 5px;
-	border:1px solid #000;
-}
-
-.postcode--btn {
-	margin-top:10px;
 	padding:1em;
-	width:100px;
-	font-size: 1.5rem;
+}
+
+.postcode {
+	display:none;
+	position: absolute;
+	left:0;
+	top:300px;
+	width:100%;
+	text-align: center;
 }
 
 .display-timetable {
 	margin-top: 20px;
-	padding: 0.5rem 0;
+	padding: 1em;
 }
 
-.display-list {
-	list-style: none;
-}
+	.display-list {
+		list-style: none;
+	}
 
-.display-list li {
-	padding-bottom: 0.3rem;
-}
+	.display-list li {
+		padding-bottom: 0.5rem;
+	}
 
 @media (max-width: 320px) {
-	header {
-		padding:0 1.5rem;
+	header, .display-timetable {
+		padding:0 .5em;
 	}
 	header p {
 		font-size: 10px;
@@ -90,4 +84,4 @@ header {
 	#map-canvas {
 		height: 200px;
 	}
-	}
+}
