--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,10 @@ html, body {
 
 	.display-list li {
 		background-color: rgba(0,0,0,0.1);
-		padding-bottom: 0.5rem;
+		padding: 1em 0;
+		padding-right:10px;
+		border-top:1px solid #666;
+		border-bottom:1px solid #666;
 	}
 
 	.right {
