Dirty close red colouring

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,9 @@ html, body {
 		border-top:1px solid #666;
 		border-bottom:1px solid #666;
 	}
+	.close {
+		background-color: rgba(255,0,0,0.1);
+	}
 
 	.right {
 		float: right;
