--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,10 @@ html, body {
 		border-bottom:1px solid #666;
 	}
 	.display-list .close {
-		background-color: rgba(255,0,0,0.5);
+		background-color: rgba(255,0,0,0.3);
+	}
+	.display-list .not-so-close {
+		background-color: rgba(0,255,0,0.3);
 	}
 
 	.right {
