--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ html, body {
 		font-size: 24px;
 		font-style: bold;
 	}
+	.display-list .towards-text {
+		font-size:12px;
+	}
+
 }
 
 @media (max-width: 320px) {
