--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@ html, body {
   color: #d35400;
 }
 
+.cf:before,
+.cf:after {
+    content: "";
+    display: table;
+}
+.cf:after {
+    clear: both;
+}
+.cf {
+    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+
 #map-canvas {
 	margin: 0 auto;
 	padding: 0;
@@ -91,6 +103,7 @@ html, body {
 		border-bottom:1px solid #666;
 		height: 100px;
 	}
+
 	.display-list .close {
 		/*background-color: rgba(255,0,0,0.3);*/
 		background-color: #c0392b;
@@ -99,10 +112,10 @@ html, body {
 	.display-list .not-so-close {
 		background-color: rgba(0,255,0,0.3);
 	}
+
 	.display-list .number, .display-list .time  {
 		font-size: 36px;
 		font-weight: bold;
-		float: left;
 	}
 	.display-list .time {
 		float: right;
@@ -111,7 +124,8 @@ html, body {
 		font-size: 20px;
 	}
 	.display-list .top, .display-list .bottom {
-		display: inline-block;
+		display: block;
+		width:100%;
 	}
 
 @media (max-width: 400px) {
