--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,26 @@ html, body {
 		width:100%;
 	}
 
+footer {
+	border-top:1px solid rgba(0,0,0,0.2);
+	color:#666;
+	padding:1em 0;
+	text-align: right;
+}
+	footer a {
+		text-decoration: none;
+		color:#aaa;
+		-webkit-transition:all 0.2s ease-in-out;
+		-moz-transition:all 0.2s ease-in-out;
+		-o-transition:all 0.2s ease-in-out;
+		-ms-transition:all 0.2s ease-in-out;
+		transition:all 0.2s ease-in-out;
+	}
+	footer a:hover {
+		text-decoration: underline;
+		color:#666;
+	}
+
 @media (max-width: 400px) {
 	.display-list .number, .display-list .time {
 		font-size: 30px;
