--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,15 @@ html, body {
 	display:none;
 	position: absolute;
 	left:0;
-	top:250px;
+	top:200px;
 	width:100%;
 	text-align: center;
+}
+
+#postcode {
+	background-color: #FAF8FF;
+	text-align: center;
+	width: 100px;
 }
 
 .bus-stop {
