--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,35 @@ html, body {
 		border: 1px solid #999;
 		border-radius:15px;
 	}
-	.
+.postcode-button {
+	margin-top: 1em;
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+	background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+	background-color:#f9f9f9;
+	border-radius:20px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	color:#333;
+	font-size: 12px;
+	height:30px;
+	line-height:30px;
+	width:130px;
+	text-align:center;
+	text-shadow:1px 1px 0px #ffffff;
+}
+.postcode-button:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+	background-color:#e9e9e9;
+}.postcode-button:active {
+	position:relative;
+	top:1px;
+}
 
 .bus-stop {
 	text-align: center;
