--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ html, body {
 #map-canvas {
 	margin: 0 auto;
 	padding: 0;
+	margin-top: 100px;
 	height: 300px;
 	width:100%;
 	-webkit-transition:all 0.3s ease-in-out;
@@ -54,7 +55,7 @@ html, body {
 	max-width:800px;
 	margin-top:1.3em;
 }
-.alpha-banner {
+.banner {
 	z-index: 999;
 	display: block;
 	top:0;
@@ -65,16 +66,13 @@ html, body {
 	color:#fff;
 	position: fixed;
 }
-	.alpha-banner p {
-		padding: 1em;
+	header {
+		padding:0.3em 1em;
+		max-width: 800px;
+		margin: 0 auto;
 	}
-
-
-header {
-	margin-top: 40px;
-}
 	header h1 {
-		font-size: 40px;
+		text-align: left;
 		font-weight: 100;
 	}
 
